RESOLVED FIXED30003
[GStreamer] READY state doesn't mean "enough data"
https://bugs.webkit.org/show_bug.cgi?id=30003
Summary [GStreamer] READY state doesn't mean "enough data"
Sebastian Dröge (slomo)
Reported 2009-10-02 01:45:16 PDT
Hi, currently in MediaPlayerPrivate::updateStates() it is assumed that READY means that there is enough data. That's not true, READY only means that devices could be opened successfully, not that the sinks already has the first data. That's only true for PAUSED or PLAYING.
Attachments
proposed patch (2.55 KB, patch)
2009-10-15 02:23 PDT, Philippe Normand
gustavo: review-
now with bug link (2.61 KB, patch)
2009-10-15 06:05 PDT, Philippe Normand
no flags
Philippe Normand
Comment 1 2009-10-15 02:23:45 PDT
Created attachment 41214 [details] proposed patch
Gustavo Noronha (kov)
Comment 2 2009-10-15 06:00:18 PDT
Comment on attachment 41214 [details] proposed patch Can you add the bug URL to the ChangeLog? =)
Philippe Normand
Comment 3 2009-10-15 06:05:59 PDT
Created attachment 41222 [details] now with bug link
WebKit Commit Bot
Comment 4 2009-10-15 07:46:56 PDT
Comment on attachment 41222 [details] now with bug link Clearing flags on attachment: 41222 Committed r49626: <http://trac.webkit.org/changeset/49626>
WebKit Commit Bot
Comment 5 2009-10-15 07:47:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.