2009-10-15  Philippe Normand  <pnormand@igalia.com>

Reviewed by Gustavo Noronha.

        [GStreamer] READY state doesn't mean "enough data"
        https://bugs.webkit.org/show_bug.cgi?id=30003

        STATE_READY means MediaPlayer::HaveNothing

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::updateStates):

Canonical link: https://commits.webkit.org/41090@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49626 268f45cc-cd09-0410-ab3c-d52691b4dbfc